--- a/ERPWeb/Views/AgroConfiguration/GetInvoiceWiseSales.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetInvoiceWiseSales.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row text-sm" style="margin-top:-15px">
-    <div class="col-md-12">
+<div class="row text-sm p-0" style="margin-top:-15px">
+    <div class="col-md-12 p-0">
 
         <div class="row" style="margin-top:-5px">
             <div class="col-md-12">
@@ -50,7 +50,7 @@
 
                             <div class="col-md-1">
                                 <div class="input-group input-group-sm">
-                                    <select class="form-control form-control-sm float-right select2" id="rptType" name="rptType">
+                                    <select class="form-control form-control-sm float-right" id="rptType" name="rptType">
                                         <option value="PDF">PDF</option>
                                         <option value="EXCEL">EXCEL</option>
                                     </select>
@@ -69,14 +69,12 @@
         <div class="row" style="margin-top:-3px">
             
 
-            <div class="col-md-12" style="margin-top:-10px">
-                <div class="card">
-                    <div class="card-body"style="margin-top:-10px">
-                        <div class="col-md-12" id="dataContainer">
+            <div class="col-md-12" style="margin-top:-13px">
+                
+                        <div class="col-md-12 p-0" id="dataContainer">
 
                         </div>
-                    </div>
-                </div>
+                   
             </div>
         </div>
 
