--- a/ERPWeb/Views/AgroConfiguration/GetProductwisesalesReport.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductwisesalesReport.cshtml
@@ -5,8 +5,8 @@
 }
 
 
-<div class="row text-sm" style="margin-top:-15px">
-    <div class="col-md-12">
+<div class="row text-sm p-0" style="margin-top:-15px">
+    <div class="col-md-12 p-0">
 
         <div class="row" style="margin-top:-5px">
             <div class="col-md-12">
@@ -66,14 +66,14 @@
                 </div>
             </div>*@
 
-            <div class="col-md-12" style="margin-top:-10px">
-                <div class="card">
-                    <div class="card-body"style="margin-top:-10px">
-                        <div class="col-md-12" id="dataContainer">
+            <div class="col-md-12" style="margin-top:-13px">
+                
+                   
+                        <div class="col-md-12 p-0" id="dataContainer">
 
                         </div>
-                    </div>
-                </div>
+                
+               
             </div>
 
         </div>
