--- a/ERPWeb/Views/AgroConfiguration/DateWiseCollection.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DateWiseCollection.cshtml
@@ -14,8 +14,8 @@
     }
 </style>
 
-<div class="row text-sm" style="margin-top:-15px">
-    <div class="col-md-12">
+<div class="row text-sm p-0" style="margin-top:-15px">
+    <div class="col-md-12 p-0">
 
         <div class="row" style="margin-top:-5px">
             <div class="col-md-12">
@@ -102,14 +102,12 @@
             </div>
         </div>*@
         <div class="row" style="margin-top:-3px">
-            <div class="col-md-12" style="margin-top:-10px">
-                <div class="card">
-                    <div class="card-body" style="margin-top:-10px">
-                        <div class="col-md-12" id="dataContainer">
+            <div class="col-md-12" style="margin-top:-13px">
+                
+                        <div class="col-md-12 p-0" id="dataContainer">
 
                         </div>
-                    </div>
-                </div>
+                  
             </div>
 
         </div>
