--- a/ERPWeb/Views/AgroConfiguration/GetReturnRawMaterialReportList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetReturnRawMaterialReportList.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row text-sm" style="margin-top:-15px">
-    <div class="col-md-12">
+<div class="row text-sm p-0" style="margin-top:-15px">
+    <div class="col-md-12 p-0">
 
         <div class="row" style="margin-top:-5px">
             <div class="col-md-12">
@@ -79,21 +79,19 @@
         </div>
 
 
-        <div class="row" style="margin-top:-17px">
-            <div class="col-md-12">
+        <div class="row" style="margin-top:-3px">
+            @*<div class="col-md-12">
                 <div class="card card-gray-dark">
                     
                 </div>
-            </div>
+            </div>*@
 
-            <div class="col-md-12" style="margin-top:-10px">
-                <div class="card">
-                    <div class="card-body"style="margin-top:-10px">
-                        <div class="col-md-12" id="dataContainer">
+            <div class="col-md-12" style="margin-top:-13px">
+               
+                        <div class="col-md-12 p-0" id="dataContainer">
 
                         </div>
-                    </div>
-                </div>
+                   
             </div>
         </div>
 
