--- a/ERPWeb/Views/AgroConfiguration/_GetBankPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetBankPartialView.cshtml
@@ -5,7 +5,7 @@
     var SL = 0;
 }
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
+    <div class="col-md-12 p-0">
         <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tableBankData">
             <thead class="btn-dark">
                 <tr class="text-center">
@@ -40,7 +40,7 @@
                         <td class="text-center">@item.Status</td>
                         <td class="text-center">
 
-                            <a href="#" class="btn btn-warning btn-sm data-edit-item-Bank" style="line-height:1" data-edit-item-Bank="@item.BankId"><i class="fa fa-pen"></i> Edit</a>
+                            <a href="#" class="dasedit-btn data-edit-item-Bank" style="line-height:1" data-edit-item-Bank="@item.BankId"><i class="fa fa-pen"></i></a>
 
                         </td>
                     </tr>
